Добавлен api модели user
